[package]
name = "ekitai"
version = "0.1.0"
authors = ["tarberd <bernardo.mferrari@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntax = { path = "../syntax" }
hir = { path = "../hir" }
salsa = "0.16.1"
