[package]
name = "syntax"
version = "0.1.0"
authors = ["tarberd <bernardo.mferrari@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
lexer = { path = "../lexer" }
rowan = "0.12" 
num-traits = "0.2"
expect-test = "1.1"
